--- a/html-css-popup/index.html
+++ b/html-css-popup/index.html
@@ -25,23 +25,23 @@
       <nav class="header__nav">
         <ul class="header__nav-items">
           <li class="header__nav-item">
-            <input type="checkbox" class="hide" id="checkboxFirst" />
-            <label for="checkboxFirst" class="btn">Media</label>
-            <div id="popupFirst" class="popup">
+            <input class="visually-hidden" type="checkbox" id="checkF" />
+            <label class="btn" for="checkF">Media</label>
+            <div class="popup">
               <ul class="popup__conteiner"></ul>
             </div>
           </li>
           <li class="header__nav-item">
-            <input type="checkbox" class="hide" id="checkboxSecond" />
-            <label for="checkboxSecond" class="btn">Maps</label>
-            <div id="popupSecond" class="popup">
+            <input class="visually-hidden" type="checkbox" id="checkS" />
+            <label class="btn" for="checkS">Maps</label>
+            <div class="popup">
               <ul class="popup__conteiner"></ul>
             </div>
           </li>
           <li class="header__nav-item">
-            <input type="checkbox" class="hide" id="checkboxThird" />
-            <label for="checkboxThird" class="btn">Arrow</label>
-            <div id="popupThird" class="popup">
+            <input class="visually-hidden" type="checkbox" id="checkT" />
+            <label class="btn" for="checkT">Arrow</label>
+            <div class="popup">
               <ul class="popup__conteiner"></ul>
             </div>
           </li>
