Робота над меню PopUp.
Що саме зроблено:
- створив та налаштував анімацію клавіші more;
- налаштував анімацію появи PopUp;
- створив та налаштував зовнішній вигляд scrollbar;
- додав додаткову секцію PopUp.

--- a/html-css-popup/index.html
+++ b/html-css-popup/index.html
@@ -111,6 +111,93 @@
                   >
                 </li>
               </ul>
+              <div class="popup__more">
+                <input class="visually-hidden" type="checkbox" id="more" />
+                <label class="btn-more" for="more">more</label>
+              </div>
+              <ul class="popup__items more">
+                <li class="popup__item">
+                  <a
+                    class="popup__item-link bg-facebook"
+                    href="https://www.flaticon.com/free-icon-font/facebook_6422199"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Facebook</a
+                  >
+                </li>
+                <li class="popup__item">
+                  <a
+                    class="popup__item-link bg-whatsapp"
+                    href="https://www.flaticon.com/free-icon-font/whatsapp_6422213"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Whatsapp</a
+                  >
+                </li>
+                <li class="popup__item">
+                  <a
+                    class="popup__item-link bg-twitter"
+                    href="https://www.flaticon.com/free-icon-font/twitter_6422210"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Twitter</a
+                  >
+                </li>
+                <li class="popup__item">
+                  <a
+                    class="popup__item-link bg-linkedin"
+                    href="https://www.flaticon.com/free-icon-font/linkedin_6422202"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Linkedin</a
+                  >
+                </li>
+                <li class="popup__item">
+                  <a
+                    class="popup__item-link bg-tik-tok"
+                    href="https://www.flaticon.com/free-icon-font/tik-tok_6422207"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Tik-tok</a
+                  >
+                </li>
+                <li class="popup__item">
+                  <a
+                    class="popup__item-link bg-telegram"
+                    href="https://www.flaticon.com/free-icon-font/telegram_6422206"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Telegram</a
+                  >
+                </li>
+                <li class="popup__item">
+                  <a
+                    class="popup__item-link bg-vk"
+                    href="https://www.flaticon.com/free-icon-font/vk_6422212"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Vk</a
+                  >
+                </li>
+                <li class="popup__item">
+                  <a
+                    class="popup__item-link bg-goodreads"
+                    href="https://www.flaticon.com/free-icon-font/goodreads_6424086"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Goodreads</a
+                  >
+                </li>
+                <li class="popup__item">
+                  <a
+                    class="popup__item-link bg-instagram"
+                    href="https://www.flaticon.com/free-icon-font/instagram_6422200"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    >Instagram</a
+                  >
+                </li>
+              </ul>
             </div>
           </li>
           <li class="header__nav-item">
