--- a/html-css-popup/index.html
+++ b/html-css-popup/index.html
@@ -26,7 +26,7 @@
         <ul class="header__nav-items">
           <li class="header__nav-item">
             <input class="visually-hidden" type="checkbox" id="checkF" />
-            <label class="btn" for="checkF">Media</label>
+            <label class="btn" for="checkF">Media icons</label>
             <div class="popup">
               <ul class="popup__items">
                 <li class="popup__item">
@@ -111,107 +111,64 @@
                   >
                 </li>
               </ul>
-              <div class="popup__more">
-                <input class="visually-hidden" type="checkbox" id="more" />
-                <label class="btn-more" for="more">more</label>
-              </div>
+              <input class="visually-hidden more" type="checkbox" id="more" />
+              <label class="btn-more" for="more">more</label>
               <ul class="popup__items more">
                 <li class="popup__item">
                   <a
-                    class="popup__item-link bg-facebook"
-                    href="https://www.flaticon.com/free-icon-font/facebook_6422199"
+                    class="popup__item-link bg-hand"
+                    href="https://www.flaticon.com/free-icon-font/hand_3916589"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
-                    >Facebook</a
+                    >Hand</a
                   >
                 </li>
                 <li class="popup__item">
                   <a
-                    class="popup__item-link bg-whatsapp"
-                    href="https://www.flaticon.com/free-icon-font/whatsapp_6422213"
+                    class="popup__item-link bg-hastag"
+                    href="https://www.flaticon.com/free-icon-font/hastag_5068677"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
-                    >Whatsapp</a
+                    >Hastag</a
                   >
                 </li>
                 <li class="popup__item">
                   <a
-                    class="popup__item-link bg-twitter"
-                    href="https://www.flaticon.com/free-icon-font/twitter_6422210"
+                    class="popup__item-link bg-heart"
+                    href="https://www.flaticon.com/free-icon-font/heart_3916767"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
-                    >Twitter</a
+                    >Heart</a
                   >
                 </li>
                 <li class="popup__item">
                   <a
-                    class="popup__item-link bg-linkedin"
-                    href="https://www.flaticon.com/free-icon-font/linkedin_6422202"
+                    class="popup__item-link bg-user-add"
+                    href="https://www.flaticon.com/free-icon-font/user-add_3917582"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
-                    >Linkedin</a
+                    >User add</a
                   >
                 </li>
                 <li class="popup__item">
                   <a
-                    class="popup__item-link bg-tik-tok"
-                    href="https://www.flaticon.com/free-icon-font/tik-tok_6422207"
+                    class="popup__item-link bg-xing"
+                    href="https://www.flaticon.com/free-icon-font/xing_6422214"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
-                    >Tik-tok</a
+                    >Xing</a
                   >
                 </li>
                 <li class="popup__item">
                   <a
-                    class="popup__item-link bg-telegram"
-                    href="https://www.flaticon.com/free-icon-font/telegram_6422206"
+                    class="popup__item-link bg-snapchat"
+                    href="https://www.flaticon.com/free-icon-font/snapchat_6422205"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
-                    >Telegram</a
-                  >
-                </li>
-                <li class="popup__item">
-                  <a
-                    class="popup__item-link bg-vk"
-                    href="https://www.flaticon.com/free-icon-font/vk_6422212"
-                    target="_blank"
-                    rel="noopener noreferrer nofollow"
-                    >Vk</a
-                  >
-                </li>
-                <li class="popup__item">
-                  <a
-                    class="popup__item-link bg-goodreads"
-                    href="https://www.flaticon.com/free-icon-font/goodreads_6424086"
-                    target="_blank"
-                    rel="noopener noreferrer nofollow"
-                    >Goodreads</a
-                  >
-                </li>
-                <li class="popup__item">
-                  <a
-                    class="popup__item-link bg-instagram"
-                    href="https://www.flaticon.com/free-icon-font/instagram_6422200"
-                    target="_blank"
-                    rel="noopener noreferrer nofollow"
-                    >Instagram</a
+                    >Snapchat</a
                   >
                 </li>
               </ul>
-            </div>
-          </li>
-          <li class="header__nav-item">
-            <input class="visually-hidden" type="checkbox" id="checkS" />
-            <label class="btn" for="checkS">Maps</label>
-            <div class="popup">
-              <ul class="popup__items"></ul>
-            </div>
-          </li>
-          <li class="header__nav-item">
-            <input class="visually-hidden" type="checkbox" id="checkT" />
-            <label class="btn" for="checkT">Arrow</label>
-            <div class="popup">
-              <ul class="popup__items"></ul>
             </div>
           </li>
           <li class="header__nav-item">
@@ -220,7 +177,7 @@
               href="https://www.flaticon.com/icon-fonts-most-downloaded"
               target="_blank"
               rel="noopener noreferrer nofollow"
-              >Others</a
+              >Other icons</a
             >
           </li>
         </ul>
