--- a/html-css-popup/index.html
+++ b/html-css-popup/index.html
@@ -198,7 +198,7 @@
         rel="noopener noreferrer nofollow"
         >=^.^=</a
       >
-      <nav>
+      <nav class="footer__nav">
         <ul class="footer__links">
           <li>
             <a
