--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -31,5 +31,70 @@
     <!-- title -->
     <title>Practice with wireframe</title>
   </head>
-  <body class="wrapper"></body>
+  <body class="wrapper">
+    <header class="header">
+      <div class="header__container">
+        <div class="header__logo logo">
+          <svg
+            class="logo__icon"
+            width="24"
+            height="24"
+            viewBox="0 0 23 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M15.8464 0.962961H0L6.67215 7.63511H22.5185L15.8464 0.962961ZM6.67214 7.63512V23.4815L-8.58307e-06 16.8093V0.962965L6.67214 7.63512Z"
+              fill="#CCCCCC" />
+            <path
+              fill-rule="evenodd"
+              clip-rule="evenodd"
+              d="M6.67219 23.4815L22.5186 23.4815L15.8464 16.8093L3.62396e-05 16.8093L6.67219 23.4815ZM15.8464 16.8093L15.8464 0.962961L22.5186 7.63511L22.5186 23.4815L15.8464 16.8093Z"
+              fill="black" />
+          </svg>
+          <a class="logo__text" href="#">photo</a>
+        </div>
+        <nav class="header__nav">
+          <ul class="header__items">
+            <li class="header__item link">
+              <a class="link__header" href="#">Features</a>
+            </li>
+            <li class="header__link link">
+              <a class="link__header" href="#">Pricing</a>
+            </li>
+            <li class="header__link link">
+              <a class="link__header" href="#">Community</a>
+            </li>
+            <li class="header__link link">
+              <a class="link__header" href="#">Support</a>
+            </li>
+          </ul>
+          <ul class="header__links">
+            <li class="header__link btn">
+              <a class="btn__header" href="#">Log in</a>
+            </li>
+            <li class="header__link btn">
+              <a class="btn__header" href="#">Register</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="content">
+      <section class="content__hero hero">
+        <div class="hero__container">
+          <h1 class="hero__title">
+            The largest community of photo enthusiasts
+          </h1>
+          <a class="hero__btn btn" href="#">Join Today</a>
+        </div>
+      </section>
+      <section class="content__body body"></section>
+      <section class="content__sub-page sub-page"></section>
+      <section class="content__testimonials testimonials"></section>
+      <section class="content__signup signup"></section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
