--- a/sass_bem_wireframe_practice/pages/navigation.html
+++ b/sass_bem_wireframe_practice/pages/navigation.html
@@ -11,16 +11,18 @@
     <meta name="Copyright" content="Oleksii Anoshkin" />
     <meta name="Address" content="Ukraine, Kharkiv" />
     <!-- general -->
-    <meta name="description" content="practice with wireframe" />
+    <meta name="description" content="Practice with wireframe - Navigation" />
     <meta name="keywords" content="Wireframes, BEM, SCSS, SASS" />
     <meta name="robots" content="all" />
     <!-- facebook -->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="site" />
-    <meta property="og:title" content="Practice with wireframe" />
+    <meta property="og:title" content="Practice with wireframe - Navigation" />
     <meta property="og:image" content="#" />
     <meta property="og:url" content="#" />
-    <meta property="og:site_name" content="Practice with wireframe" />
+    <meta
+      property="og:site_name"
+      content="Practice with wireframe - Navigation" />
     <!-- styles -->
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
@@ -33,10 +35,10 @@
     <!-- images -->
     <link rel="shortcut icon" type="image/x-icon" href="./image/favicon.jpg" />
     <!-- title -->
-    <title>Practice with wireframe</title>
+    <title>Practice with wireframe - Navigation</title>
   </head>
   <body class="wrapper">
-    <header class="header">
+    <header class="header first">
       <div class="header__container">
         <div class="header__logo logo">
           <svg
@@ -85,20 +87,8 @@
         </nav>
       </div>
     </header>
-    <main class="content">
-      <section class="content__hero hero">
-        <div class="hero__container">
-          <h1 class="hero__title">
-            The largest community of photo enthusiasts
-          </h1>
-          <a class="hero__btn btn" href="#">Join Today</a>
-        </div>
-      </section>
-      <section class="content__body body"></section>
-      <section class="content__sub-page sub-page"></section>
-      <section class="content__testimonials testimonials"></section>
-      <section class="content__signup signup"></section>
-    </main>
-    <footer></footer>
+    <header class="header second"></header>
+    <header class="header third"></header>
+    <header class="header fourth"></header>
   </body>
 </html>
