--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -94,7 +94,33 @@
           <a class="hero__btn btn" href="#">Join Today</a>
         </div>
       </section>
-      <section class="content__body body"></section>
+      <section class="content__body body">
+        <div class="body__container">
+          <h2 class="body__header"></h2>
+          <ul class="body__items">
+            <li class="body__item item">
+              <h3 class="item__title"></h3>
+              <p class="item__text"></p>
+              <a href="" class="item__link"></a>
+            </li>
+            <li class="body__item item">
+              <h3 class="item__title"></h3>
+              <p class="item__text"></p>
+              <a href="" class="item__link"></a>
+            </li>
+            <li class="body__item item">
+              <h3 class="item__title"></h3>
+              <p class="item__text"></p>
+              <a href="" class="item__link"></a>
+            </li>
+            <li class="body__item item">
+              <h3 class="item__title"></h3>
+              <p class="item__text"></p>
+              <a href="" class="item__link"></a>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="content__sub-page sub-page"></section>
       <section class="content__testimonials testimonials"></section>
       <section class="content__signup signup"></section>
