--- a/sass_bem_wireframe_practice/pages/hero.html
+++ b/sass_bem_wireframe_practice/pages/hero.html
@@ -11,18 +11,16 @@
     <meta name="Copyright" content="Oleksii Anoshkin" />
     <meta name="Address" content="Ukraine, Kharkiv" />
     <!-- general -->
-    <meta name="description" content="Practice with wireframe - Navigation" />
+    <meta name="description" content="Practice with wireframe - Hero" />
     <meta name="keywords" content="Wireframes, BEM, SCSS, SASS" />
     <meta name="robots" content="all" />
     <!-- facebook -->
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="site" />
-    <meta property="og:title" content="Practice with wireframe - Navigation" />
+    <meta property="og:title" content="Practice with wireframe - Hero" />
     <meta property="og:image" content="#" />
     <meta property="og:url" content="#" />
-    <meta
-      property="og:site_name"
-      content="Practice with wireframe - Navigation" />
+    <meta property="og:site_name" content="Practice with wireframe - Hero" />
     <!-- styles -->
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./styles.css" />
@@ -35,7 +33,7 @@
     <!-- images -->
     <link rel="shortcut icon" type="image/x-icon" href="./image/favicon.jpg" />
     <!-- title -->
-    <title>Practice with wireframe - Navigation</title>
+    <title>Practice with wireframe - Hero</title>
   </head>
   <body class="wrapper"></body>
 </html>
