--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -37,94 +37,269 @@
   </head>
   <body class="wrapper">
     <header class="header">
-      <div class="header__container">
-        <div class="header__logo logo">
-          <svg
-            class="logo__icon"
-            width="24"
-            height="24"
-            viewBox="0 0 23 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M15.8464 0.962961H0L6.67215 7.63511H22.5185L15.8464 0.962961ZM6.67214 7.63512V23.4815L-8.58307e-06 16.8093V0.962965L6.67214 7.63512Z"
-              fill="#CCCCCC" />
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M6.67219 23.4815L22.5186 23.4815L15.8464 16.8093L3.62396e-05 16.8093L6.67219 23.4815ZM15.8464 16.8093L15.8464 0.962961L22.5186 7.63511L22.5186 23.4815L15.8464 16.8093Z"
-              fill="black" />
-          </svg>
-          <a class="logo__text" href="#">photo</a>
-        </div>
-        <nav class="header__nav">
-          <ul class="header__items">
-            <li class="header__item link">
-              <a class="link__header" href="#">Features</a>
-            </li>
-            <li class="header__link link">
-              <a class="link__header" href="#">Pricing</a>
-            </li>
-            <li class="header__link link">
-              <a class="link__header" href="#">Community</a>
-            </li>
-            <li class="header__link link">
-              <a class="link__header" href="#">Support</a>
-            </li>
-          </ul>
-          <ul class="header__links">
-            <li class="header__link btn">
-              <a class="btn__header" href="#">Log in</a>
-            </li>
-            <li class="header__link btn">
-              <a class="btn__header" href="#">Register</a>
-            </li>
-          </ul>
-        </nav>
+      <div class="header__logo logo">
+        <svg
+          class="logo__icon"
+          width="24"
+          height="24"
+          viewBox="0 0 23 24"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M15.8464 0.962961H0L6.67215 7.63511H22.5185L15.8464 0.962961ZM6.67214 7.63512V23.4815L-8.58307e-06 16.8093V0.962965L6.67214 7.63512Z"
+            fill="#CCCCCC" />
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M6.67219 23.4815L22.5186 23.4815L15.8464 16.8093L3.62396e-05 16.8093L6.67219 23.4815ZM15.8464 16.8093L15.8464 0.962961L22.5186 7.63511L22.5186 23.4815L15.8464 16.8093Z"
+            fill="black" />
+        </svg>
+        <a class="logo__text" href="./index.html">photo</a>
       </div>
+      <nav class="header__nav nav">
+        <ul class="nav__items">
+          <li class="nav__item link">
+            <a class="link__header" href="#">Features</a>
+          </li>
+          <li class="nav__item link">
+            <a class="link__header" href="#">Pricing</a>
+          </li>
+          <li class="nav__item link">
+            <a class="link__header" href="#">Community</a>
+          </li>
+          <li class="nav__item link">
+            <a class="link__header" href="#">Support</a>
+          </li>
+        </ul>
+        <ul class="nav__items">
+          <li class="nav__item btn">
+            <a class="btn__header" href="#">Log in</a>
+          </li>
+          <li class="nav__item btn">
+            <a class="btn__header" href="#">Register</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <main class="content">
       <section class="content__hero hero">
-        <div class="hero__container">
-          <h1 class="hero__title">
-            The largest community of photo enthusiasts
-          </h1>
-          <a class="hero__btn btn" href="#">Join Today</a>
-        </div>
+        <h1 class="hero__title">The largest community of photo enthusiasts</h1>
+        <a class="hero__btn btn" href="#">Join Today</a>
       </section>
       <section class="content__body body">
-        <div class="body__container">
-          <h2 class="body__header"></h2>
-          <ul class="body__items">
-            <li class="body__item item">
-              <h3 class="item__title"></h3>
-              <p class="item__text"></p>
-              <a href="" class="item__link"></a>
+        <h2 class="body__header">Snap photos and share like never before</h2>
+        <div class="body__top top">
+          <ul class="top__items">
+            <li class="top__item item">
+              <h3 class="item__title">Sed ut perspiciatis</h3>
+              <p class="item__text">
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+                aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                voluptatem sequi nesciunt. Neque porro quisquam est.
+              </p>
+              <a class="item__link" href="#">Learn more</a>
             </li>
-            <li class="body__item item">
-              <h3 class="item__title"></h3>
-              <p class="item__text"></p>
-              <a href="" class="item__link"></a>
+            <li class="top__item item">
+              <h3 class="item__title">Lorem ipsum dolor</h3>
+              <p class="item__text">
+                Amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi.
+              </p>
+              <a class="item__link" href="#">Learn more</a>
             </li>
-            <li class="body__item item">
-              <h3 class="item__title"></h3>
-              <p class="item__text"></p>
-              <a href="" class="item__link"></a>
+            <li class="top__item item">
+              <h3 class="item__title">Nemo enim ipsam</h3>
+              <p class="item__text">
+                Consequuntur magni dolores eos qui ratione voluptatem sequi
+                nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor
+                sit amet, consectetur, adipisci velit, sed quia non numquam.
+              </p>
+              <a class="item__link" href="#">Learn more</a>
             </li>
-            <li class="body__item item">
-              <h3 class="item__title"></h3>
-              <p class="item__text"></p>
-              <a href="" class="item__link"></a>
+            <li class="top__item item">
+              <h3 class="item__title">Tempor incididunt</h3>
+              <p class="item__text">
+                Eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam
+                est, qui dolorem ipsum quia dolor sit amet, consectetur,
+                adipisci velit, sed quia non numquam eius modi tempora.
+              </p>
+              <a class="item__link" href="#">Learn more</a>
+            </li>
+          </ul>
+        </div>
+        <div class="body__bot bot">
+          <ul class="bot__items">
+            <li class="bot__item item">
+              <img
+                class="item__img"
+                src="./image/body/body-img.svg"
+                alt="rectangle"
+                width="750"
+                height="440" />
+              <div class="item__wrap">
+                <h3 class="item__title">Sed ut perspiciatis unde omnis</h3>
+                <p class="item__text">
+                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+                  odit aut fugit, sed quia consequuntur magni dolores eos qui
+                  ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                  qui dolorem.
+                </p>
+              </div>
+            </li>
+            <li class="bot__item item">
+              <img
+                class="item__img"
+                src="./image/body/body-img.svg"
+                alt="rectangle"
+                width="750"
+                height="440" />
+              <div class="item__wrap">
+                <h3 class="item__title">Sed ut perspiciatis unde omnis</h3>
+                <p class="item__text">
+                  Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut
+                  odit aut fugit, sed quia consequuntur magni dolores eos qui
+                  ratione voluptatem sequi nesciunt. Neque porro quisquam est,
+                  qui dolorem.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
-      <section class="content__sub-page sub-page"></section>
-      <section class="content__testimonials testimonials"></section>
-      <section class="content__signup signup"></section>
+      <section class="content__sub-page sub-page">
+        <h2 class="sub-page__header">
+          The largest community of photo enthusiasts
+        </h2>
+        <img
+          class="sub-page__img"
+          src="./image/sub-page/sub-page-img.svg"
+          alt="rectangle"
+          width="750"
+          height="440" />
+      </section>
+      <section class="content__testimonials testimonials">
+        <h2 class="testimonials__title">You&#39;re in good company</h2>
+        <p class="testimonials__text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore
+        </p>
+        <ul class="testimonials__items">
+          <li class="testimonials__item item">
+            <img
+              class="item__img"
+              src="./image/testimonials/testimonials-img.svg"
+              alt="rectangle"
+              width="172"
+              height="76" />
+          </li>
+          <li class="testimonials__item item">
+            <img
+              class="item__img"
+              src="./image/testimonials/testimonials-img.svg"
+              alt="rectangle"
+              width="172"
+              height="76" />
+          </li>
+          <li class="testimonials__item item">
+            <img
+              class="item__img"
+              src="./image/testimonials/testimonials-img.svg"
+              alt="rectangle"
+              width="172"
+              height="76" />
+          </li>
+          <li class="testimonials__item item">
+            <img
+              class="item__img"
+              src="./image/testimonials/testimonials-img.svg"
+              alt="rectangle"
+              width="172"
+              height="76" />
+          </li>
+          <li class="testimonials__item item">
+            <img
+              class="item__img"
+              src="./image/testimonials/testimonials-img.svg"
+              alt="rectangle"
+              width="172"
+              height="76" />
+          </li>
+          <li class="testimonials__item item">
+            <img
+              class="item__img"
+              src="./image/testimonials/testimonials-img.svg"
+              alt="rectangle"
+              width="172"
+              height="76" />
+          </li>
+          <li class="testimonials__item item">
+            <img
+              class="item__img"
+              src="./image/testimonials/testimonials-img.svg"
+              alt="rectangle"
+              width="172"
+              height="76" />
+          </li>
+          <li class="testimonials__item item">
+            <img
+              class="item__img"
+              src="./image/testimonials/testimonials-img.svg"
+              alt="rectangle"
+              width="172"
+              height="76" />
+          </li>
+        </ul>
+      </section>
+      <section class="content__signup signup">
+        <h2 class="signup__title">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore
+        </h2>
+        <ul class="signup__items">
+          <li class="signup__item btn">
+            <a class="btn__signup" href="#">Join Today</a>
+          </li>
+          <li class="signup__item btn">
+            <a class="btn__signup" href="#">Contact us</a>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <nav class="footer__nav nav">
+        <div class="nav__other">
+          <ul></ul>
+          <div class="footer__logo logo">
+            <svg
+              class="logo__icon"
+              width="24"
+              height="24"
+              viewBox="0 0 23 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M15.8464 0.962961H0L6.67215 7.63511H22.5185L15.8464 0.962961ZM6.67214 7.63512V23.4815L-8.58307e-06 16.8093V0.962965L6.67214 7.63512Z"
+                fill="#CCCCCC" />
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M6.67219 23.4815L22.5186 23.4815L15.8464 16.8093L3.62396e-05 16.8093L6.67219 23.4815ZM15.8464 16.8093L15.8464 0.962961L22.5186 7.63511L22.5186 23.4815L15.8464 16.8093Z"
+                fill="black" />
+            </svg>
+            <a class="logo__text" href="./index.html">photo</a>
+          </div>
+          <ul></ul>
+        </div>
+        <div class="nav__social">
+          <ul></ul>
+          <p></p>
+        </div>
+      </nav>
+    </footer>
   </body>
 </html>
