Розмітка макету завершена.
Назви класів намагався створювати відповідно до методології БЕМ.

--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -271,7 +271,11 @@
     <footer class="footer">
       <nav class="footer__nav nav">
         <div class="nav__other">
-          <ul></ul>
+          <ul class="nav__items">
+            <li><a class="link__footer" href="#">Mobile app</a></li>
+            <li><a class="link__footer" href="#">Community</a></li>
+            <li><a class="link__footer" href="#">Company</a></li>
+          </ul>
           <div class="footer__logo logo">
             <svg
               class="logo__icon"
@@ -293,11 +297,56 @@
             </svg>
             <a class="logo__text" href="./index.html">photo</a>
           </div>
-          <ul></ul>
+          <ul class="nav__items">
+            <li><a class="link__footer" href="#">Help desk</a></li>
+            <li><a class="link__footer" href="#">Blog</a></li>
+            <li><a class="link__footer" href="#">Resources</a></li>
+          </ul>
         </div>
         <div class="nav__social">
-          <ul></ul>
-          <p></p>
+          <ul class="nav__items">
+            <li class="nav__item link">
+              <a class="link__footer" href="#">
+                <img
+                  class="link__img"
+                  src="./image/footer/social-img.svg"
+                  alt="ellipse"
+                  width="44"
+                  height="44" />
+              </a>
+            </li>
+            <li class="nav__item link">
+              <a class="link__footer" href="#">
+                <img
+                  class="link__img"
+                  src="./image/footer/social-img.svg"
+                  alt="ellipse"
+                  width="44"
+                  height="44" />
+              </a>
+            </li>
+            <li class="nav__item link">
+              <a class="link__footer" href="#">
+                <img
+                  class="link__img"
+                  src="./image/footer/social-img.svg"
+                  alt="ellipse"
+                  width="44"
+                  height="44" />
+              </a>
+            </li>
+            <li class="nav__item link">
+              <a class="link__footer" href="#">
+                <img
+                  class="link__img"
+                  src="./image/footer/social-img.svg"
+                  alt="ellipse"
+                  width="44"
+                  height="44" />
+              </a>
+            </li>
+          </ul>
+          <p class="nav__text">&#169; Photo, Inc. 2019. We love our users!</p>
         </div>
       </nav>
     </footer>
