--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -22,21 +22,16 @@
     <meta property="og:url" content="#" />
     <meta property="og:site_name" content="Practice with wireframe" />
     <!-- styles -->
-    <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="./styles.css" />
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap"
-      rel="stylesheet" />
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- images -->
     <link rel="shortcut icon" type="image/x-icon" href="./image/favicon.jpg" />
     <!-- title -->
     <title>Practice with wireframe</title>
   </head>
   <body class="wrapper">
+    <!-- header -->
     <header class="header">
+      <!-- logo -->
       <div class="header__logo logo">
         <svg
           class="logo__icon"
@@ -58,7 +53,9 @@
         </svg>
         <a class="logo__text" href="./index.html">photo</a>
       </div>
+      <!-- navbar -->
       <nav class="header__nav nav">
+        <!-- page links -->
         <ul class="nav__items">
           <li class="nav__item link">
             <a class="link__header" href="#">Features</a>
@@ -73,6 +70,7 @@
             <a class="link__header" href="#">Support</a>
           </li>
         </ul>
+        <!-- buttons -->
         <ul class="nav__items">
           <li class="nav__item btn">
             <a class="btn__header" href="#">Log in</a>
@@ -84,12 +82,16 @@
       </nav>
     </header>
     <main class="content">
+      <!-- hero -->
       <section class="content__hero hero">
         <h1 class="hero__title">The largest community of photo enthusiasts</h1>
         <a class="hero__btn btn" href="#">Join Today</a>
       </section>
+      <!-- body -->
       <section class="content__body body">
+        <!-- title -->
         <h2 class="body__header">Snap photos and share like never before</h2>
+        <!-- items -->
         <div class="body__top top">
           <ul class="top__items">
             <li class="top__item item">
@@ -130,6 +132,7 @@
             </li>
           </ul>
         </div>
+        <!-- body bottom block -->
         <div class="body__bot bot">
           <ul class="bot__items">
             <li class="bot__item item">
@@ -169,6 +172,7 @@
           </ul>
         </div>
       </section>
+      <!-- sub-page -->
       <section class="content__sub-page sub-page">
         <h2 class="sub-page__header">
           The largest community of photo enthusiasts
@@ -180,6 +184,7 @@
           width="750"
           height="440" />
       </section>
+      <!-- testimonials -->
       <section class="content__testimonials testimonials">
         <h2 class="testimonials__title">You&#39;re in good company</h2>
         <p class="testimonials__text">
@@ -253,6 +258,7 @@
           </li>
         </ul>
       </section>
+      <!-- signup -->
       <section class="content__signup signup">
         <h2 class="signup__title">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -268,8 +274,10 @@
         </ul>
       </section>
     </main>
+    <!-- footer -->
     <footer class="footer">
       <nav class="footer__nav nav">
+        <!-- nav links -->
         <div class="nav__other">
           <ul class="nav__items">
             <li><a class="link__footer" href="#">Mobile app</a></li>
@@ -303,6 +311,7 @@
             <li><a class="link__footer" href="#">Resources</a></li>
           </ul>
         </div>
+        <!-- social links -->
         <div class="nav__social">
           <ul class="nav__items">
             <li class="nav__item link">
