--- a/sass_bem_wireframe_practice/index.html
+++ b/sass_bem_wireframe_practice/index.html
@@ -37,7 +37,7 @@
           class="logo__icon"
           width="24"
           height="24"
-          viewBox="0 0 23 24"
+          viewBox="0 0 24 24"
           fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path
@@ -56,27 +56,27 @@
       <!-- navbar -->
       <nav class="header__nav nav">
         <!-- page links -->
-        <ul class="nav__items">
-          <li class="nav__item link">
-            <a class="link__header" href="#">Features</a>
+        <ul class="nav__items links">
+          <li class="nav__item">
+            <a class="link__header link" href="#">Features</a>
           </li>
-          <li class="nav__item link">
-            <a class="link__header" href="#">Pricing</a>
+          <li class="nav__item">
+            <a class="link__header link" href="#">Pricing</a>
           </li>
-          <li class="nav__item link">
-            <a class="link__header" href="#">Community</a>
+          <li class="nav__item">
+            <a class="link__header link" href="#">Community</a>
           </li>
-          <li class="nav__item link">
-            <a class="link__header" href="#">Support</a>
+          <li class="nav__item">
+            <a class="link__header link" href="#">Support</a>
           </li>
         </ul>
         <!-- buttons -->
-        <ul class="nav__items">
-          <li class="nav__item btn">
-            <a class="btn__header" href="#">Log in</a>
+        <ul class="nav__items btns">
+          <li class="nav__item">
+            <a class="btn__header btn" href="#">Log in</a>
           </li>
-          <li class="nav__item btn">
-            <a class="btn__header" href="#">Register</a>
+          <li class="nav__item">
+            <a class="btn__header btn" href="#">Register</a>
           </li>
         </ul>
       </nav>
